--- a/notebooks/work/Ableton.ipynb
+++ b/notebooks/work/Ableton.ipynb
@@ -16,7 +16,7 @@
     "require 'sqlite3'\n",
     "\n",
     "# Open a database\n",
-    "db = SQLite3::Database.new \"songs.db\"\n",
+    "db = SQLite3::Database.new \"ableton.db\"\n",
     "\n",
     "nil"
    ]
@@ -27,8 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def date_of_next(day)\n",
+    "  date  = Date.parse(day)\n",
+    "  delta = date > Date.today ? 0 : 7\n",
+    "  date + delta\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db.execute <<-SQL\n",
-    "drop table songs;\n",
+    "drop table IF EXISTS songs;\n",
     "SQL\n",
     "\n",
     "\n",
@@ -109,7 +122,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "drop table arrangements;\n",
+    "drop table IF EXISTS arrangements;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -197,7 +210,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "drop table keys;\n",
+    "drop table IF EXISTS keys;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -271,7 +284,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "drop table song_schedules;\n",
+    "drop table IF EXISTS song_schedules;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -317,8 +330,8 @@
     "      attrs = song_schedule['attributes']\n",
     "      rel = song_schedule['relationships']\n",
     "\n",
-    "      arrangement_id = rel['arrangement']['data']['id']\n",
-    "      key_id = rel['key']['data']['id']\n",
+    "       arrangement_id = rel.dig('arrangement', 'data','id')\n",
+    "      key_id = rel.dig('key', 'data','id')\n",
     "      plan_id = rel['plan']['data']['id']\n",
     "      service_type_id = rel['service_type']['data']['id']\n",
     "      item_id = rel['item']['data']['id']\n",
@@ -364,7 +377,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "  drop table service_types;\n",
+    "  drop table IF EXISTS service_types;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -436,7 +449,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "  drop table plans;\n",
+    "  drop table IF EXISTS plans;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -519,7 +532,7 @@
    "outputs": [],
    "source": [
     "db.execute <<-SQL\n",
-    "drop table plan_items;\n",
+    "drop table IF EXISTS plan_items;\n",
     "SQL\n",
     "\n",
     "# Create table for arrangements\n",
@@ -549,17 +562,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#db.execute( \"delete from plan_items\" )\n",
+    "db.execute( \"delete from plan_items\" )\n",
+    "\n",
+    "d = date_of_next(\"Sunday\")\n",
     "\n",
     "# Load service types from PCO\n",
-    "db.execute( \"select id, service_type_id from plans\" ) do |row|\n",
+    "db.execute( \"select id, service_type_id, dates from plans where dates = '#{d.strftime(\"%Y-%m-%d\")}' and service_type_id = '643436'\" ) do |row|\n",
     "  plan_id = row[0]\n",
     "  service_type_id = row[1]\n",
+    "  dates = row[2]\n",
     "  offset = 0\n",
     "  per_page = 100\n",
     "  fetch_more = true\n",
     "\n",
     "  while fetch_more\n",
+    "    puts dates\n",
     "\n",
     "    response = api.services.v2.service_types[service_type_id.to_i].plans[plan_id.to_i].items.get(offset: offset, per_page: per_page)\n",
     "\n",
@@ -613,11 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def date_of_next(day)\n",
-    "  date  = Date.parse(day)\n",
-    "  delta = date > Date.today ? 0 : 7\n",
-    "  date + delta\n",
-    "end\n",
+    "\n",
     "\n",
     "sunday_songs = []\n",
     "\n",
@@ -647,7 +660,7 @@
     "  sunday_songs << row\n",
     "end\n",
     "\n",
-    "nil"
+    "sunday_songs"
    ]
   },
   {
@@ -666,11 +679,10 @@
     "project_data  = Nokogiri::XML(project_xml)\n",
     "\n",
     "scenes = project_data.xpath(\"/Ableton/LiveSet/SceneNames/Scene\")\n",
-    "p scenes\n",
+    "# p scenes\n",
     "\n",
     "sunday_songs.each_with_index do |song, index|\n",
     "  new_value = \"(#{song[3]}) #{song[0]}; #{song[1]} BPM; #{song[2]}\"\n",
-    "  p index\n",
     "  scenes[index][:Value] = new_value\n",
     "end\n",
     "\n",
@@ -687,39 +699,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plot frequency diagram"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.execute(<<-SQL\n",
-    "  SELECT\n",
-    "    s.title,\n",
-    "    count(p.dates) as count\n",
-    "  FROM\n",
-    "    plan_items pi\n",
-    "    JOIN songs s ON s.id = pi.song_id\n",
-    "    JOIN plans p on p.id = pi.plan_id\n",
-    "  GROUP BY\n",
-    "    s.title\n",
-    "  ORDER BY\n",
-    "    count(p.dates) desc\n",
-    "SQL\n",
-    "  ) do |row|\n",
-    "    p row\n",
-    "  end\n",
-    "\n",
-    "nil"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -729,7 +708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 2.5.1",
+   "display_name": "Ruby 2.7.0",
    "language": "ruby",
    "name": "ruby"
   },
@@ -737,7 +716,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "2.5.1"
+   "version": "2.7.0"
   }
  },
  "nbformat": 4,
