--- a/notebooks/work/Setlist select.ipynb
+++ b/notebooks/work/Setlist select.ipynb
@@ -9,127 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Need 13\n",
     "songs = [\n",
-    "    'O Lord, My Rock and My Redeemer',\n",
-    "    'Give Me Faith',\n",
-    "    'O Great God',\n",
-    "    'Our God Saves',\n",
-    "    'All I Have Is Christ',\n",
-    "    'In Christ Alone',\n",
-    "    'How Firm A Foundation',\n",
-    "    'Cornerstone',\n",
-    "    'Let Your Kingdom Come',\n",
-    "    'The Solid Rock',\n",
-    "    'Awesome is the Lord Most High',\n",
-    "    'Praise The King',\n",
-    "    'The Greatness of Our God',\n",
-    "    'God With Us',\n",
-    "    'Lamb of God',\n",
-    "    'All Praise To Him',\n",
-    "    'Cling to Chris'\n",
+    "  \"Goodness Of God\",\n",
+    "  \"How Rich A Treasure We Possess\",\n",
+    "  \"Sovereign\",\n",
+    "  \"O Great God\",\n",
+    "  \"Sovereign Over Us\",\n",
+    "  \"Hail The Day That Christ Arose\",\n",
+    "  \"O Lord My Rock And My Redeemer\",\n",
+    "  \"God You're So Good\",\n",
+    "  \"He Will Hold Me Fast\",\n",
+    "  \"Yet Not I But Through Christ In Me\",\n",
+    "  \"The Greatness Of Our God\",\n",
+    "  \"His Mercy Is More\",\n",
+    "  \"Worthy Of More\",\n",
+    "  \"Hosanna (Praise Is Rising)\",\n",
+    "  \"King Of Kings\",\n",
+    "  \"Jesus Messiah\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17 songs\n",
-      "Set 1:\n",
-      "The Greatness of Our God\n",
-      "Praise The King\n",
-      "Awesome is the Lord Most High\n",
-      "Our God Saves\n",
-      "\n",
-      "Set 2:\n",
-      "O Lord, My Rock and My Redeemer\n",
-      "Cornerstone\n",
-      "Let Your Kingdom Come\n",
-      "God With Us\n",
-      "\n",
-      "Set 3:\n",
-      "All I Have Is Christ\n",
-      "Cling to Chris\n",
-      "God With Us\n",
-      "In Christ Alone\n",
-      "\n",
-      "Set 4:\n",
-      "The Solid Rock\n",
-      "Lamb of God\n",
-      "All I Have Is Christ\n",
-      "God With Us\n",
-      "\n",
-      "Set 5:\n",
-      "All Praise To Him\n",
-      "Lamb of God\n",
-      "Our God Saves\n",
-      "How Firm A Foundation\n",
-      "\n",
-      "Set 6:\n",
-      "In Christ Alone\n",
-      "O Lord, My Rock and My Redeemer\n",
-      "Praise The King\n",
-      "Give Me Faith\n",
-      "\n",
-      "Set 7:\n",
-      "O Great God\n",
-      "Praise The King\n",
-      "All Praise To Him\n",
-      "Cornerstone\n",
-      "\n",
-      "Set 8:\n",
-      "Cling to Chris\n",
-      "The Greatness of Our God\n",
-      "O Great God\n",
-      "Awesome is the Lord Most High\n",
-      "\n",
-      "Set 9:\n",
-      "Let Your Kingdom Come\n",
-      "In Christ Alone\n",
-      "How Firm A Foundation\n",
-      "The Greatness of Our God\n",
-      "\n",
-      "Set 10:\n",
-      "Lamb of God\n",
-      "The Solid Rock\n",
-      "Cling to Chris\n",
-      "Give Me Faith\n",
-      "All Praise To Him\n",
-      "\n",
-      "Set 11:\n",
-      "How Firm A Foundation\n",
-      "Awesome is the Lord Most High\n",
-      "Our God Saves\n",
-      "O Lord, My Rock and My Redeemer\n",
-      "Cornerstone\n",
-      "\n",
-      "Set 12:\n",
-      "O Great God\n",
-      "Let Your Kingdom Come\n",
-      "The Solid Rock\n",
-      "Give Me Faith\n",
-      "All I Have Is Christ\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import choice\n",
     "import pprint\n",
+    "import random\n",
     "\n",
     "song_count = len(songs)\n",
     "print(\"{} songs\".format(song_count))\n",
     "\n",
-    "probs_abs = [3] * song_count\n",
+    "probs_abs = [4] * song_count\n",
+    "set_count = 9\n",
     "\n",
     "def get_rel_probs(probs_abs):\n",
     "    return list(map(lambda x: x/sum(probs_abs), probs_abs))\n",
@@ -162,22 +81,42 @@
     "\n",
     "current_probs = list(probs_abs)\n",
     "\n",
-    "while len(sets) < 9:\n",
-    "    (next_set, current_probs) = get_next_set(current_probs)\n",
+    "time_since_last_5 = 0\n",
+    "\n",
+    "while len(sets) < set_count:\n",
+    "    is_fiver = 0 #random.random() > 0.85 - (.15 * time_since_last_5)\n",
+    "    \n",
+    "    time_since_last_5 += 1\n",
+    "    if is_fiver:\n",
+    "        time_since_last_5 = 0\n",
+    "        \n",
+    "    song_count = 5 if is_fiver else 4\n",
+    "    (next_set, current_probs) = get_next_set(current_probs, song_count)\n",
     "    sets.append(next_set)\n",
     "    \n",
-    "while len(sets) < 12:\n",
-    "    (next_set, current_probs) = get_next_set(current_probs, 5)\n",
-    "    sets.append(next_set)\n",
     "    \n",
-    "for n in range(12):\n",
-    "    print(\"Set {}:\".format(n+1))\n",
+    "for n in range(set_count):\n",
+    "    print(\"- # Set {}:\".format(n+1))\n",
     "    \n",
     "    for song in sets[n]:\n",
-    "        print(song)\n",
+    "        print(\"  - {}\".format(song))\n",
     "    \n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -203,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
